--- a/app/src/main/res/values/attr.xml
+++ b/app/src/main/res/values/attr.xml
@@ -7,4 +7,9 @@
         <attr name="startHeight" format="dimension" />
         <attr name="finalHeight" format="dimension" />
     </declare-styleable>
+
+    <declare-styleable name="MultiSwipeRefreshLayout">
+        <attr name="foreground"
+              format="reference"/>
+    </declare-styleable>
 </resources>
