--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,13 @@
     <color name="white">#FFFFFF</color>
 
     <color name="colorPrimaryTransparent">#991B7AEA</color>
+
+    <color name="refresh_progress_1">#e91e63</color>
+    <color name="refresh_progress_2">#00b0ff</color>
+    <color name="refresh_progress_3">@color/colorPrimaryDark</color>
+
+
+    <color name="theme_primary">#432e2a</color>
+    <color name="theme_primary_dark">#2d1e1b</color>
+    <color name="theme_primary_darker">#e84e40</color>
 </resources>
